Potential overflow fix on mobile.

--- a/assets/scss/partials/_body.scss
+++ b/assets/scss/partials/_body.scss
@@ -1,6 +1,9 @@
-body{
+body, html{
   background-color: $dark-grey;
   color: $white;
+  width 100%;
+  max-width 100%;
+  overflow-x: hidden;
 }
 
 a {
